--- a/delivery/delivery/templates/address/edit_address.html
+++ b/delivery/delivery/templates/address/edit_address.html
@@ -1,3 +1,81 @@
-<html>
-    <h1>D</h1>
-</html>
+{% extends "index.html" %}
+
+{% block top %}
+
+
+<section class="hero is-primary">
+    <div class="hero-body">
+        <div class="container">
+            <h1>Cadastro de Endereço<h1>
+        </div>
+    </div>
+</section>
+{% endblock %}
+
+{% block main %}
+<form action='{{url_for("cate.edit_address", id=address.id)}}' method='post' enctype='multipart/form-data'>
+    <div class="col-md-7 col-md-offset-4">
+
+        {{form.csrf_token}}
+
+        <div class="form-group">
+            <label>CEP</label>
+            {{ form.zip_code(class="form-control", placeholder="CEP") }}
+            {% if form.errors.password %}
+            <div class="alert alert-danger" role="alert">
+                <ul>
+                    {% for e in cate.errors.password %}
+                    <li>{{ e }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            {% endif %}
+        </div>
+
+        <div class="form-group">
+            <label>Estado</label>
+            {{ form.state(class="form-control") }}
+        </div>
+
+        <div class="form-group">
+            <label>Cidade</label>
+            {{ form.city(class="form-control") }}
+        </div>
+
+        <div class="form-group">
+            <label>Endereço</label>
+            {{ form.address(class="form-control", placeholder="Endereço") }}
+            {% if form.errors.password %}
+            <div class="alert alert-danger" role="alert">
+                <ul>
+                    {% for e in cate.errors.password %}
+                    <li>{{ e }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            {% endif %}
+        </div>
+
+        <div class="form-group">
+            <label>Número da casa</label>
+            {{ form.number_house(class="form-control", placeholder="N°") }}
+            {% if form.errors.password %}
+            <div class="alert alert-danger" role="alert">
+                <ul>
+                    {% for e in cate.errors.password %}
+                    <li>{{ e }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            {% endif %}
+        </div>
+
+        <div class="form-group">
+            <input class="button is-link" type="submit" value="Cadastrar">          
+        </div>
+    </div>
+</form>
+<div class="col-md-3 col-md-offset-4">
+    <button class="button is-link is-light"><a href="{{ url_for('cate.list_address')}}">Voltar</a></button>
+</div>
+{% endblock %}
