--- a/delivery/delivery/templates/address/list_address.html
+++ b/delivery/delivery/templates/address/list_address.html
@@ -37,7 +37,7 @@
             <td>{{address.number_house}}</td>
             <td>{{address.user_id}}</td>
             <td>
-                <a href="{{url_for('cate.edit_address')}}">Editar</a>
+                <a href="{{url_for('cate.edit_address', id=address.id)}}">Editar</a>
                 <a href="{{url_for('cate.delete_address', id=address.id)}}">Deletar</a>
             </td>
 
