--- a/delivery/delivery/templates/items/list_items.html
+++ b/delivery/delivery/templates/items/list_items.html
@@ -33,7 +33,7 @@
             <td>{{items.store_id}}</td>
             <td>{{items.available}}</td>
             <td>
-                <a href="{{url_for('cate.edit_items')}}">Editar</a>
+                <a href="{{url_for('cate.edit_items', id=items.id)}}">Editar</a>
                 <a href="{{url_for('cate.delete_items', id=items.id)}}">Deletar</a>
             </td>
 
