--- a/delivery/delivery/templates/order/edit_order.html
+++ b/delivery/delivery/templates/order/edit_order.html
@@ -1,3 +1,59 @@
-<html>
-    <h1>E</h1>
-</html>
+{% extends "index.html" %}
+
+{% block top %}
+
+
+<section class="hero is-primary">
+    <div class="hero-body">
+        <div class="container">
+            <h1>Cadastro de Ordem de compra<h1>
+        </div>
+    </div>
+</section>
+{% endblock %}
+
+{% block main %}
+<form action='{{url_for("cate.edit_order", id=order.id)}}' method='post' enctype='multipart/form-data'>
+    <div class="col-md-3 col-md-offset-4">
+
+        {{form.csrf_token}}
+
+        <div class="form-group">
+            <label>Estabelecimento: </label>
+            {{ form.store_id(class="form-control", placeholder="Estabelecimento que comprou") }}
+            {% if form.errors.name %}
+            <div class="alert alert-danger" role="alert">
+                <ul>
+                    {% for e in form.errors.name %}
+                    <li>{{ e }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            {% endif %}
+        </div>
+
+        <div class="form-group">
+            <label>Comprar agora? </label>
+            {{ form.completed(class="checkbox", type="checkbox") }}
+            {% if form.errors.available %}
+            <div class="alert alert-danger" role="alert">
+                <ul>
+                    {% for e in form.errors.available %}
+                    <li>{{ e }}</li>
+                    {% endfor %}
+                </ul>   
+            </div>
+            {% endif %}
+        </div>
+
+        <div class="form-group">
+            <input class="button is-link" type="submit" value="Cadastrar">
+        </div>
+
+
+    </div>
+</form>
+<div class="col-md-3 col-md-offset-4">
+    <button class="button is-link is-light"><a href="{{ url_for('cate.list_order')}}">Voltar</a></button>
+</div>
+{% endblock %}
