--- a/delivery/delivery/templates/order/list_order.html
+++ b/delivery/delivery/templates/order/list_order.html
@@ -19,6 +19,7 @@
     <thead>
         <tr>
             <th>Loja</th>
+            <th>Data e hora que comprou</th>
             <th>Comprar agora?</th>
             <th></th>
         </tr>
@@ -27,9 +28,10 @@
         {% for order in orders %}
         <tr>
             <td>{{order.store_id}}</td>
+            <td>{{order.created_at}}</td>
             <td>{{order.completed}}</td>
             <td>
-                <a href="{{url_for('cate.edit_order')}}">Editar</a>
+                <a href="{{url_for('cate.edit_order', id=order.id)}}">Editar</a>
                 <a href="{{url_for('cate.delete_order', id=order.id)}}">Deletar</a>
             </td>
 
