--- a/delivery/delivery/templates/store/list_store.html
+++ b/delivery/delivery/templates/store/list_store.html
@@ -33,7 +33,7 @@
             <td>{{store.user_id}}</td>
             <td>{{store.active}}</td>
             <td>
-                <a href="{{url_for('cate.edit_store')}}">Editar</a>
+                <a href="{{url_for('cate.edit_store', id=store.id)}}">Editar</a>
                 <a href="{{url_for('cate.delete_store', id=store.id)}}">Deletar</a>
             </td>
 
