--- a/delivery/delivery/templates/login/userform.html
+++ b/delivery/delivery/templates/login/userform.html
@@ -14,53 +14,57 @@
 
 {% block main %}
 <form action='{{url_for("main.signup")}}' method='post' enctype='multipart/form-data'>
-    <div class="col-md-3 col-md-offset-4">
+    <div class="columns is-multiline is-mobile">
+        <div class="column is-one-quarter">
 
-        {{form.csrf_token}}
+            {{form.csrf_token}}
 
-        <div class="field">
-            <label class="label">Name</label>
+            <div class="field">
+                <label class="label">Name</label>
+                <div class="control">
+                    {{form.name(class="form-control", placeholder="Name")}}
+                </div>
+            </div>
+
+            <div class="field">
+                <label class="label">Email</label>
+                <div class="control has-icons-left has-icons-right">
+                    {{form.email(class="input is-success", type="email", placeholder="Email")}}
+                    <span class="icon is-small is-left">
+                        <i class="fas fa-envelope"></i>
+                    </span>
+                    {% if form.errors.email %}
+                    {% for e in form.errors.email %}
+                    <p class="help is-danger">{{ e }}</p>
+                    {% endfor %}
+                    {% endif %}
+                </div>
+            </div>
+
+
+            <div class="field">
+                <label class="label">Senha</label>
+                <div class="control">
+                    {{form.password(class="form-control", placeholder="Senha")}}
+                </div>
+            </div>
+
+
+
             <div class="control">
-                {{form.name(class="form-control", placeholder="Name")}}
+                <input class="btn btn-info" type="submit" value="Cadastrar">
             </div>
         </div>
-
-        <div class="field">
-            <label class="label">Email</label>
-            <div class="control has-icons-left has-icons-right">
-                {{form.email(class="input is-success", type="email", placeholder="Email")}}
-                <span class="icon is-small is-left">
-                    <i class="fas fa-envelope"></i>
-                </span>
-                {% if form.errors.email %}
-                {% for e in form.errors.email %}
-                <p class="help is-danger">{{ e }}</p>
-                {% endfor %}
-                {% endif %}
-            </div>
-        </div>
-
-
-        <div class="field">
-            <label class="label">Senha</label>
-            <div class="control">
-                {{form.password(class="form-control", placeholder="Senha")}}
-            </div>
-        </div>
-
-        <label class="label">Foto</label>
-        <figure class="thumb col-md-4">
-            <img class="img-responsive">
+        <div class="column is-one-quarter">
+        <figure class="thumb col-md-8">
+            <img src="{{url_for('cate.uploaded_file', filename='capa_padrao.jpg')}}" alt="">
             <figcaption>
                 <label class="fileContainer">
+                    Escolha uma foto!
                     {{form.foto(class="btn btn-link")}}
                 </label>
             </figcaption>
         </figure>
-
-        <div class="control">
-            <input class="btn btn-info" type="submit" value="Cadastrar">
-        </div>
     </div>
 </form>
 {% endblock %}
