--- a/delivery/delivery/templates/items/list_items.html
+++ b/delivery/delivery/templates/items/list_items.html
@@ -34,6 +34,7 @@
             <td>{{items.available}}</td>
             <td>
                 <a href="{{url_for('cate.edit_items', id=items.id)}}">Editar</a>
+                <!--<a href="{{url_for('cate.delete_items', id=items.id)}}">Deletar</a>-->
                 <a href="{{url_for('cate.delete_items', id=items.id)}}">Deletar</a>
             </td>
 
@@ -43,6 +44,6 @@
 </table>
 
 
-<a class="btn btn-primary" href="{{ url_for('cate.register_items') }}">Nova Categoria</a>
+<a class="btn btn-primary" href="{{ url_for('cate.register_items') }}">Adicionar</a>
 {% endblock %}
 {% endblock %}
