Fixed some bugs and improveriment pag home

--- a/delivery/delivery/templates/items/edit_items.html
+++ b/delivery/delivery/templates/items/edit_items.html
@@ -97,7 +97,7 @@
 <div class="column is-one-quarter">
     <div class="form-group">
         <figure class="thumb col-md-9">
-            <img class="img-responsive" src="{{url_for('cate.uploaded_file', filename=capa_item)}}">
+            <img class="img-responsive" src="{{url_for('page.upload_file', file=capa_item)}}">
             <figcaption>
                 <label class="fileContainer">
                     Escolha uma imagem!
