--- a/delivery/delivery/templates/items/register_items.html
+++ b/delivery/delivery/templates/items/register_items.html
@@ -101,6 +101,7 @@
             <figcaption>
                 <label class="fileContainer">
                     Escolha uma imagem!
+                    {{ form.images }}
                     {{ form.image }}
                 </label>
             </figcaption>
