--- a/delivery/delivery/templates/base.html
+++ b/delivery/delivery/templates/base.html
@@ -66,7 +66,7 @@
             </a>
           </div>
         </div>
-        {% if current_user.is_authenticated %}
+        {% if current_user.admin == True and current_user.is_authenticated%}
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link">
             Cadastros
