--- a/delivery/delivery/templates/index.html
+++ b/delivery/delivery/templates/index.html
@@ -21,6 +21,6 @@
 
 {% block main %}
 <div class="columns">
-    {{ list_item.cards([1, 2, 3, 4])}}
+    {{ list_item.cards(item)}}
 </div>
 {% endblock main %}
