--- a/delivery/delivery/templates/macros/list_item.html
+++ b/delivery/delivery/templates/macros/list_item.html
@@ -1,34 +1,32 @@
 {% macro cards(items) %}
-    {% for item in items %}
-    <div class="column">
-        <div class="card">
-            <div class="card-image">
-                <figure class="image is-4by3">
-                <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-                </figure>
-            </div>
-            <div class="card-content">
-                <div class="media">
+{% for item in items %}
+<div class="column">
+    <div class="card">
+        <div class="card-image">
+            <figure class="image is-4by3">
+                <img src="{{url_for('page.upload_file', file=item.id)}}" alt="Placeholder image">
+            </figure>
+        </div>
+        <div class="card-content">
+            <div class="media">
                 <div class="media-left">
-                    <figure class="image is-48x48">
-                    <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-                    </figure>
                 </div>
                 <div class="media-content">
-                    <p class="title is-4">John Smith</p>
-                    <p class="subtitle is-6">@johnsmith</p>
+                    <p class="title is-4">{{item.name}}</p>
+                    <p class="title is-4">{{item.store_id}}</p>
+                    <p class="subtitle is-5"><strong>R$</strong> {{item.price}}</p>
                 </div>
-                </div>
-            
-                <div class="content">
+            </div>
+
+            <!--             <div class="content">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Phasellus nec iaculis mauris. <a>@bulmaio</a>.
                 <a href="#">#css</a> <a href="#">#responsive</a>
                 <br>
                 <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
-                </div>
-            </div>
-            </div>
+            </div> -->
+        </div>
     </div>
-    {% endfor %}
+</div>
+{% endfor %}
 {% endmacro%}
